<resources>
    <string name="app_name">Alarm</string>
    <string name="alarms">Alarms</string>
    <string name="relax">Relax</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="on_wakeup">On Wakeup</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="arrow_right">Arrow right</string>
    <string name="arrow_left">Arrow left</string>
    <string name="arrow_up">Arrow up</string>
    <string name="arrow_down">Arrow down</string>
    <string name="method_turn_off">Method to turn off the alarm: </string>
    <string name="alarm_sound">Alarm sound: </string>
    <string name="extended_privileges">Extended privileges: </string>
    <string name="to_be_changed">To be changed</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="to_be_repeated_on">Alarm will ring on: </string>
    <string name="empty">You don\'t have \n created any \n alarms yet Q_Q \n press the plus \n button below to \n create an alarm.</string>
    <string name="add">Add alarm</string>
    <string name="colon">:</string>
    <string name="time"> o\'clock</string>
    <string-array name="secmins">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="Weekdays">During the week</string>
    <string name="Weekend">During Weekends</string>
    <string name="mm">mm</string>
    <string name="hh">hh</string>
    <string-array name="spinner_method">
        <item>Tap off</item>
        <item>Math</item>
        <item>Scan a qr/bar code</item>
        <item>Location based</item>
        <item>Sudoku</item>
        <item>Memory</item>
        <item>Type a passphrase</item>
    </string-array>
    <string name="method_queue">Method queue: </string>
    <string name="revoke_priv">Revoke Privilege Rights</string>
    <string name="pick_sound">Pick your alarm sound: </string>
    <string name="pick">Pick</string>
    <string name="curr_sound">Current alarm sound: </string>
    <string name="none">Not yet set</string>
    <string name="allow_snooze">Allow snooze</string>
    <string name="ask_amount_snooze">Amount of snoozes: (-1 is infinite) </string>
    <string name="number">Number</string>
    <string name="snooze_in_min">Snooze for </string>
    <string name="min"> minutes</string>
    <string name="mmm">mmm</string>
    <string name="label">Set label to display on alarm:</string>
    <string name="labelplaceholder">label me</string>
    <string name="check_wake">Check if you are awake</string>
    <string name="minutes_turn_on">Minutes until the alarm goes on again</string>
    <string name="inc_intense">Set multiple alarm levels (WIP)</string>
    <string name="add_as_level">Add as level (asc)</string>
    <string name="by_label">Listed by label (ascending in level)</string>
    <string name="wake_me_up">Wake me up at</string>
    <string name="method">Method:</string>
    <string name="method_math">Math Method Settings: </string>
    <string name="ex_easy_difficulty">Extremely easy</string>
    <string name="easy_difficulty">Easy</string>
    <string name="middle_difficulty">Middle</string>
    <string name="hard_difficulty">Hard</string>
    <string name="ex_hard_difficulty">Extremely hard</string>
    <string name="difficulty">Difficulty: </string>
    <string name="example">Example for selected difficulty: </string>
    <string name="save">Save as set</string>
    <string name="kind_of_math">Select what kind of math task you want to solve: </string>
    <string name="method_mult">Multiplication</string>
    <string name="method_add">Addition</string>
    <string name="method_divide">Division</string>
    <string name="method_sub">Subtraction</string>
    <string name="method_faculty">Faculty (x!)</string>
    <string name="method_root">Root </string>
    <string name="root_x">(√x)</string>
    <string name="method_function_value">Value for f(x)</string>
    <string name="method_extrema">Determine extrema of f(x)</string>
    <string name="method_multiple_choice">Multiple choice questions</string>
    <string name="preference_file_key">com.example.alarm.PREFERENCE_FILE_KEY</string>
    <string name="current_math_method">empty</string>
    <string name="current_math_method_difficulty">exEasy</string>
    <string name="save_set">set</string>
    <string name="queue_shared_pref_key_adapter">com.example.alarm.QUEUE_SHARED_PREF_KEY_ADAPTER</string>
    <string name="math_to_edit_alarm_pref_key">com.example.alarm.MATH_TO_EDIT_ALARM_PREF_KEY</string>
    <string name="math_method_key">com.example.alarm.MATH_METHOD_KEY</string>
    <string name="pos_in_alarm_list_key">-1</string>
    <string name="method_to_set">com.example.alarm.METHOD_TO_SET</string>
    <string name="method_tap_off">Tap off</string>
    <string name="qr_or_bar">Chose qr- or barcode method: </string>
    <string name="qr">QR-Code</string>
    <string name="bar">Barcode</string>
    <string name="add_qr_or_bar">New QR/BarCode</string>
    <string name="or">or</string>
    <string name="add_selected">Add selected</string>
    <string name="label_me">Label me: </string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="resultQR">Result of scan</string>
    <string name="dataTypeQR">Datatype of scan</string>
    <string name="addNew">Add from above</string>
    <string name="go">Go!</string>
    <string name="km_radius_txt">Radius from location: </string>
    <string name="standard_km">600 M</string>
    <string name="change_adress_here">Change address here</string>
    <string name="example_location">Example-street 42 \n12345 Example city \nExampleCountry</string>
    <string name="tutorial">Press the arrow key twice to use \n the location from the autocompletion</string>
    <string name="rbEnter">Enter radius</string>
    <string name="rbLeave">Leave radius</string>
    <string name="queue_key">com.example.alarm.QUEUE_KEY</string>
    <string name="choose_sound">Choose your alarm sound, or add a new one</string>
    <string name="add_sound_file">Add sound file</string>
    <string name="set_sound">Set sound from above</string>
    <string name="explain_add_sound">You can also add a new sound\nusing the button below</string>
    <string name="credits_sounds">The alarms were made by musicmakerboy20 on \nhttps://www.fiverr.com/musicmakerboy20 \nif you need more, definitely check him out!</string>
    <string name="uri_key">com.example.alarm.URI_KEY</string>
    <string name="put_url">Put in the url to the audio here</string>
    <string name="set_url">Set url</string>
    <string name="sudoku_header">Settings for sudoku method: </string>
    <string name="memory_header">Settings for memory method: (WIP)</string>
    <string name="example_size_mem">6x6</string>
    <string name="alarm_id_key">com.example.alarm.ALARM_ID_KEY</string>


</resources>