<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRMethodSetActivity">





    <TextView
        android:id="@+id/txtQROrBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_or_bar"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/txtQROrBar"
        app:layout_constraintTop_toBottomOf="@+id/txtQROrBar"
        android:orientation="horizontal"
        android:id="@+id/rgQrBarMethod">

    <RadioButton
        android:id="@+id/rbQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/qr"
        android:layout_marginEnd="10dp"
        android:checked="true"/>

    <RadioButton
        android:id="@+id/rbBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/bar"
        app:layout_constraintEnd_toEndOf="@+id/txtQROrBar"
        app:layout_constraintTop_toBottomOf="@+id/txtQROrBar"
        android:checked="false"/>

    </RadioGroup>



    <Button
        android:id="@+id/btnAddQRBarCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_qr_or_bar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgQrBarMethod" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnAddQRBarCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dataTypeQR"
        android:id="@+id/txtDecode"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFormat"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDecode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/resultQR"/>



    <TextView
        android:id="@+id/txtLabelMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/label_me"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnAddQRBarCode"
        app:layout_constraintStart_toStartOf="@+id/btnAddQRBarCode"
        app:layout_constraintTop_toBottomOf="@+id/txtFormat" />

    <EditText
        android:id="@+id/editLabelMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:autofillHints="name"
        android:hint="@string/labelplaceholder"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/btnAddQRBarCode"
        app:layout_constraintStart_toStartOf="@+id/btnAddQRBarCode"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelMe" />


    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/or"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLabelMe" />

    <Spinner
        android:id="@+id/spinnerQRBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOr" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_selected"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerQRBar" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>