<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryMethodSetActivity">


    <TextView
        android:id="@+id/txtMemorySettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_header"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>


    <SeekBar
        android:id="@+id/seekMemorySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50"
        app:layout_constraintTop_toBottomOf="@+id/txtMemorySettings"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>


    <TextView
        android:id="@+id/txtMemSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_size_mem"
        app:layout_constraintTop_toBottomOf="@+id/seekMemorySize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>


    <GridView
        android:id="@+id/gridMemoryExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekMemorySize"
        android:layout_marginStart="32dp"/>


    <Button
        android:id="@+id/btnAddMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>